--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "cpu_game_benchmark"
+harness = false
