--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+ndarray = "0.15"
 
 [dev-dependencies]
 criterion = "0.5"
@@ -17,3 +18,4 @@ harness = false
 
 [profile.bench]
 debug = 1
+lto = "fat"
