--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 ndarray = "0.15"
+vulkano = "0.34.0"
+vulkano-shaders = "0.34.0"
 
 [dev-dependencies]
 criterion = "0.5"
